# gestureconsole

./: CMakeLists.txt  README  README.md  capture.h  gesture.h  main.cpp  reactor.cpp  scale_para  segmenter.cpp  skin.cpp  skin.h  skinAlgo.cpp  skinAlgo.h  svm-predict.cpp  svm-predict.h  tracker.cpp  tracker.h  training_data.txt.scale.model  utility.h
include/: enumList.h  reactor.h  recognizer.h  resource.h  segmenter.h  spotter.h
src/: CMakeLists.txt  capture.cpp  gesture.cpp  reactor.cpp  recognizer.cpp  spotter.cpp  svm.cpp  utility.cpp
